--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,18 +1,21 @@
 .header {
     text-align: center;
-    padding: 1rem;
+    padding: 2rem;
 
     user-select: none; /* supported by Chrome and Opera */
    -webkit-user-select: none; /* Safari */
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
+   h1 {
+       font-size: 3.5rem;
+   }
    a {
     position: absolute;
     top: 5%;
     left: 80%;
     text-decoration: none;
-    color: wheat;
+    color: $tertiary-color;
     font-weight: 600;
 }
 }
@@ -25,32 +28,42 @@
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
-
+    .mob {
+        h2 {
+            font-size: 1.8rem;
+        }
+    }
 }
 
 
 .launch {
-    padding: .5rem 1rem;
-    margin: 1rem;
-    background: wheat;
+    padding: 1rem;
+    margin: 1.2rem;
+    background: $tertiary-color;
     font-weight: 600;
     transition: all .5s;
+    border: none;
+    border-radius: 1rem;
+    outline: none;
 }
 .launch:hover {
     cursor: pointer;
 }
 
 .recBook {
-    margin-top: 3rem;
-    font-size: 1.8rem;
+    margin-top: 4rem;
+    font-size: 2.3rem;
+    color: $secondary-color;
 }
 .recMovie {
-    margin-top: 3rem;
-    font-size: 1.8rem;
+    margin-top: 4rem;
+    font-size: 2.3rem;
+    color: $secondary-color;
+
 }
 
 .mobspan {
     margin: .4 2rem;
-    padding: 0 1rem;
-    border: 2px solid white;
+    padding: 0 .5rem;
+    border-bottom: 3px solid $tertiary-color;
 }
